@@ -1,6 +1,9 @@
 v3.7.2 (XXXX-XX-XX)
 -------------------
 
+* Fixed that dropping a vanished follower works again. An exception response
+  to the replication request is now handled properly.
+
 * Improve performance of many non-subquery AQL queries, by optimizing away some
   storage overhead for subquery context data.
 
